# CLI_Simulator

./: CMakeLists.txt  main.cpp
Commands/: Command.cpp  Command.h
Commands/BuiltInCommands/: Date.cpp  Date.h  Echo.cpp  Echo.h  Head.cpp  Head.h  Prompt.cpp  Prompt.h  RM.cpp  RM.h  TR.cpp  TR.h  Time.cpp  Time.h  Touch.cpp  Touch.h  Truncate.cpp  Truncate.h  WC.cpp  WC.h
Interpreter/: Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h
